--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,16 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/squawks_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical" >
+    </android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/btnToken"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/squawks_recycler_view"
+        android:text="@string/get_current_token" />
 
 </RelativeLayout>
